tests/ok/zone-placement-new.ari
struct Point {
  x: i64,
  y: i64,
}

fn main() -> i64 {
  var zone = zone::create(128);

  let number = zone::new<i64>(ref mut zone, 17);
  let point = zone::new<Point>(ref mut zone, Point { x: *number + 20, y: 9 });
  let result = (*point).x + (*point).y;

  zone::destroy(zone);
  return result;
}
